--- a/_data/style.yml
+++ b/_data/style.yml
@@ -2,3 +2,4 @@ featured-color: '#475653'
 accent-color: '#949a8c'
 light-accent-color: '#bbbfb6'
 base-color: '#d5c5b5'
+light-base-color: '#e7dfd6'
